--- a/ubs/patient/templates/city/detail.html
+++ b/ubs/patient/templates/city/detail.html
@@ -1,4 +1,4 @@
-{% extends 'core/base_dashboard.html' %}
+{% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
 {% block title %}Detalhes do Paciente{% endblock %}
