--- a/ubs/patient/templates/city/list.html
+++ b/ubs/patient/templates/city/list.html
@@ -1,5 +1,5 @@
 
-{% extends 'core/base_dashboard.html' %}
+{% extends 'core/base.html' %}
 {% load staticfiles %}
 
 {% block title %} Listagem de paciente {% endblock %}
@@ -20,32 +20,32 @@
                         <div class="card-header">
                             <strong class="card-title">Pacientes</strong>
                         </div>
-                            <a href="{% url 'core:add_patient' %}" style="padding: 17px;"> <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;"><i class="fa fa-plus-square-o" > Cadastrar</i></button></a>
+                        <div class="card-body">
+                            <a href="{% url 'patient:add_city' %}"> <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;"><i class="fa fa-plus-square-o" > Cadastrar</i></button></a>
+                        </div>
                         <div class="card-body">
                             <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
-                                        <th width="50%">Name</th>
-                                        <th width="30%">Telefone</th>
+                                        <th width="30%">Nome</th>
+                                        <th width="30%">Estado</th>
+                                        <th width="20%">Codigo IBGE7</th>
                                         <th width="20%">Ações</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for object in object_list%}
                                         <tr>
-                                            <td>{{ object.full_name}}</td>
+                                            <td>{{ object.name_city}}</td>
 
-                                            {% if object.get_phone %} 
-                                                <td> {{ object.get_phone }} </td>
-                                            {% else %} 
-                                                <td >----------------------</td>
-                                            {% endif %}
+                                            <td> {{ object.State_codIBGE_UF }} </td>
+                                            <td> {{ object.codIBGE7 }} </td>
 
                                             <td>
                                                 <div >
-                                                    <a href="{% url 'core:detail_patient' object.id %}"> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
-                                                    <a href="{% url 'core:update_patient' object.id %}"> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i></button> </a>
-                                                    <a href="{% url 'core:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a>
+                                                    <a href=""> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
+                                                    <a href=""> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i></button> </a>
+                                                    <a href=""> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a>
                                                 </div> 
                                             </td>
                                         </tr>
