--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -21,12 +21,15 @@
                             <strong class="card-title">Pacientes</strong>
                         </div>
                         <div class="card-body">
+                            <a href="{% url 'patient:add_patient' %}"> <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;"><i class="fa fa-plus-square-o" > Cadastrar</i></button></a>
+                        </div>
+                        <div class="card-body">
                             <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
-                                        <th>Name</th>
-                                        <th>Telefone</th>
-                                        <th>Ações</th>
+                                        <th width="50%">Nome</th>
+                                        <th width="30%">Telefone</th>
+                                        <th width="20%">Ações</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -44,7 +47,7 @@
                                                 <div >
                                                     <a href="{% url 'patient:detail_patient' object.id %}"> <button type="button" class="btn btn-primary btn-sm" style="border-radius: 3px;"><i class="fa fa-eye" ></i></button> </a>
                                                     <a href="{% url 'patient:update_patient' object.id %}"> <button type="button" class="btn btn-warning btn-sm" style="border-radius: 3px;"><i class="fa fa-edit" ></i></button> </a>
-                                                    {% comment %} <a href="{% url 'patient:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a> {% endcomment %}
+                                                    <a href="{% url 'patient:delete_patient' object.id %}"> <button type="button" class="btn btn-danger btn-sm" style="border-radius: 3px;"><i class="fa fa-trash-o" ></i></button> </a>
                                                 </div> 
                                             </td>
                                         </tr>
