feat: crud de city

--- a/ubs/patient/templates/patient/detail.html
+++ b/ubs/patient/templates/patient/detail.html
@@ -83,5 +83,10 @@
 
             </section>
         </aside>
+        <div class="form-actions form-group col-md-3">
+            <a href="{% url 'patient:list_patient' %}">
+                <input class="btn btn-success" style="border-radius: 3px;" type="button" value="Finalizar" />
+            </a>
+        </div>
     </div>
 {% endblock %}
