--- a/ubs/patient/templates/city/list.html
+++ b/ubs/patient/templates/city/list.html
@@ -2,7 +2,7 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Listagem de paciente {% endblock %}
+{% block title %} Listagem de cidade {% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
@@ -10,8 +10,116 @@
 {% endblock%}
 
 {% block body %}
+<div class="content mt-3">
 
-    <div class="content mt-3">
+    <div class="modal fade" id="staticModal" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel"
+        aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+    
+                    <i id="icon_remove" class="fa fa-exclamation-triangle" style="font-size: 30px; color:#dc3545"></i>
+    
+                    <h5 class="modal-title" id="staticModalLabel">
+                        <p id="content_remove">
+                            Têm certeza de que deseja remover esta cidade?
+                        </p>
+                    </h5>
+    
+                    <button type="button" onclick="reset_html()" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="msg_remove">
+                        Ao clicar em confirmar a cidade <strong id="user_remove_alert"></strong> será removido
+                        permanentemente. Essa ação não poderá ser desfeita!
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btn_cancel" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+    
+    
+                    <button id="btn_confirm" type="button" class="btn btn-primary" onclick="remove_user()">
+                        Confirmar
+                    </button>
+    
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="animated fadeIn">
+        <div class="row">
+
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <strong class="card-title">Cidades</strong>
+                    </div>
+                    <div class="card-body">
+                        <a href="{% url 'patient:add_city' %}"> <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;"><i class="fa fa-plus-square-o" > Cadastrar</i></button></a>
+                    </div>
+                    <div class="card-body">
+                        <table id="bootstrap-data-table-export listItems" class="table table-striped table-bordered" >
+                            <thead>
+                                <tr>
+                                    <th>Código IBGE7</th>
+                                    <th>Cidade</th>
+                                    <th>Estado</th>
+                                    <th class="text-center">Ações</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for object in object_list%}
+                                <tr id="line-{{object.codIBGE}}">
+                                    <td> {{ object.codIBGE7}} </td>
+                                    <td> {{ object.name_city}} </td>
+                                    <td> {{ object.State_codIBGE_UF}} </td>
+                                    
+                                    <td class="text-center">
+                                        <div>
+                                            <a href="{% url 'patient:detail_city' object.codIBGE %} ">
+                                                <button type="button" class="btn btn-primary btn-sm"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-eye"></i>
+                                                </button>
+                                            </a>
+
+                                            <a href=" {% url 'patient:update_city' object.codIBGE %} ">
+                                                <button type="button" class="btn btn-warning btn-sm"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-edit"></i>
+                                                </button>
+                                            </a>
+
+
+                                            <a >
+                                                <button type="button" class="btn btn-danger btn-sm" 
+                                                    id = "{{ object.codIBGE }}" 
+                                                    name = "{{object.name_city}}"
+                                                    data-toggle="modal" 
+                                                    data-target="#staticModal"
+                                                    onclick="get_datas(this.name,this.id)"
+                                                    style="border-radius: 3px;">
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            </a>
+
+                                        </div>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!-- .animated -->
+</div><!-- .content -->
+
+    {% comment %} <div class="content mt-3">
         <div class="animated fadeIn">
             <div class="row">
 
@@ -59,7 +167,7 @@
 
             </div>
         </div><!-- .animated -->
-    </div><!-- .content -->
+    </div><!-- .content --> {% endcomment %}
 
 
 
@@ -68,6 +176,62 @@
 {% endblock%}
 
 {% block js %}
+    <script>
+
+        id_user = 0
+        user_name = " "
+
+        function get_datas(user, id) {
+            document.getElementById('user_remove_alert').innerHTML = user
+            id_user = id
+            user_name = user
+        }
+        function remove_user() {
+
+            urlDel = "http://localhost:8000/paciente/delete-cidade/" + id_user
+
+            let xhr = new XMLHttpRequest()
+
+            xhr.open('GET', urlDel)
+
+            xhr.onreadystatechange = function () {
+                let response = JSON.parse(xhr.responseText);
+                status = response['code']
+                if (status == 1) {
+                    document.getElementById('line-' + id_user).className = 'd-none'
+                    document.getElementById('msg_remove').innerHTML = "A exlusão da cidade foi realizada com sucesso."
+                    document.getElementById('icon_remove').className = "fa fa-check-circle-o"
+                    document.getElementById('icon_remove').style = "color: green; font-size:30px;"
+                    document.getElementById('content_remove').innerHTML = "Cidade removido com sucesso!"
+                    document.getElementById('btn_cancel').className = "d-none"
+                    document.getElementById('btn_confirm').className = "d-none"
+
+                } else {
+
+                    document.getElementById('msg_remove').innerHTML = "Não foi possivel excluir esta cidade, por favor consulte um dos administradores do sistema ou um técnico."
+                    document.getElementById('content_remove').innerHTML = "Erro! Houve um erro ao excluir a cidade selecionado!"
+                    document.getElementById('btn_cancel').className = "d-none"
+                    document.getElementById('btn_confirm').className = "d-none"
+
+                }
+            }
+
+            xhr.send()
+        }
+
+        function reset_html() {
+
+            document.getElementById('msg_remove').innerHTML = "Ao clicar em confirmar a cidade <strong id='user_remove_alert'>" + user_name + "</strong> será removido permanentemente. Essa ação não poderá ser desfeita!"
+            document.getElementById('icon_remove').className = "fa fa-exclamation-triangle"
+            document.getElementById('icon_remove').style = "font-size: 30px; color:#dc3545;"
+            document.getElementById('content_remove').innerHTML = "Têm certeza de que deseja remover esta cidade?"
+            document.getElementById('btn_cancel').className = "btn btn-secondary"
+            document.getElementById('btn_confirm').innerHTML = "Confirmar"
+            document.getElementById('btn_confirm').className = "btn btn-primary"
+
+        }
+
+    </script>
     <script src={% static "vendors/datatables.net/js/jquery.dataTables.min.js" %}></script>
     <script src={% static "vendors/datatables.net-bs4/js/dataTables.bootstrap4.min.js" %}></script>
     <script src={% static "vendors/datatables.net-buttons/js/dataTables.buttons.min.js" %}></script>
@@ -79,4 +243,5 @@
     <script src={% static "vendors/datatables.net-buttons/js/buttons.print.min.js" %}></script>
     <script src={% static "vendors/datatables.net-buttons/js/buttons.colVis.min.js" %}></script>
     {% comment %} <script src={% static "assets/js/init-scripts/data-table/datatables-init.js" %}></script> {% endcomment %}
+
 {% endblock%} 
