feat: dashboard app patient

--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -64,25 +64,25 @@
                         <a href=" {% url 'patient:list_city' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Cidades</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Estados</a>
+                        <a href=" {% url 'patient:list_state' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Estados</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Convênios</a>
+                        <a href=" {% url 'patient:list_medical_insurance' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Convênios</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Cores</a>
+                        <a href=" {% url 'patient:list_color' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Cores</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Estado Conjugal</a>
+                        <a href=" {% url 'patient:list_marital_state' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Estado Conjugal</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Logradouro</a>
+                        <a href=" {% url 'patient:list_logradouro' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Logradouro</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Ocupação</a>
+                        <a href=" {% url 'patient:list_ocupation' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Ocupação</a>
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href=" {% url 'patient:add_patient' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Telefone</a>
+                        <a href=" {% url 'patient:list_phone' %}" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th-list"></i>Listar Telefone</a>
                     </li>
 
                     <h3 class="menu-title">Consultas</h3><!-- /.menu-title -->
