--- a/ubs/patient/templates/patient/add.html
+++ b/ubs/patient/templates/patient/add.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-md-10" style="margin: 20px auto;">
                         <div class="card">
-                            <div class="card-header"><strong>Consulta</strong><small> Consulta de Paciente</small>
+                            <div class="card-header"><strong>Paciente</strong>
                             </div>
                             
                     <fieldset>
@@ -76,7 +76,9 @@
                     </fieldset>
                     
                     <br>
-                    
+                    <div class="form-actions form-group col-md-3">
+                        <input value="Adicionar telefone" type="button" class="btn btn-secondary" style="border-radius: 3px;" onclick="">
+                    </div>
                     <div class="form-actions form-group col-md-3"><button type="submit" class="btn btn-success" style="border-radius: 3px;">Finalizar</button></div>
 
                     </div>
@@ -88,5 +90,12 @@
     </form>
 </div>
 </div>
+
+{% endblock %}
+
+{% block js %}
+    <script>
+
+    </script>
 
 {% endblock %}
