--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -75,7 +75,7 @@
                                 <tr id="line-{{object.id}}">
                                     <td> {{ object.full_name}} </td>
                                     
-                                    {% if object.get_phone %} 
+                                    {% if object.email %} 
                                         <td> {{ object.email }} </td>
                                     {% else %} 
                                         <td >-----------------------</td>
