--- a/ubs/patient/templates/medical_insurance/detail.html
+++ b/ubs/patient/templates/medical_insurance/detail.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-md-10" style="margin: 20px auto;">
                     <div class="card">
-                        <div class="card-header"><strong>Estado</strong>
+                        <div class="card-header"><strong>Convênio</strong>
                         </div>
 
                         <fieldset>
@@ -89,7 +89,7 @@
                         <br>
 
                         <div class="form-actions form-group col-md-3">
-                            <a href="{% url 'patient:list_state' %}">
+                            <a href="{% url 'patient:list_medical_insurance' %}">
                                 <input class="btn btn-success" style="border-radius: 3px;" type="button" value="Finalizar" />
                             </a>
                         </div>
