feat: adicionar mais de um telefone

--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -18,6 +18,8 @@
     <link rel="apple-touch-icon" href="{% static 'apple-icon.png' %}">
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
+    
+
     <link rel="stylesheet" href="{% static 'vendors/bootstrap/dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendors/font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendors/themify-icons/css/themify-icons.css' %}">
@@ -27,6 +29,7 @@
 
 
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/sweetalert.css' %}">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
