--- a/ubs/patient/templates/patient/add.html
+++ b/ubs/patient/templates/patient/add.html
@@ -1,9 +1,12 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
+{% load staticfiles %}
+
 
 {% block title %}Cadastro de Paciente{% endblock %}
 
 {% block body %}
+
 <div class="content col-md-12">
     <div class="animated fadeIn">
         <form enctype="multipart/form-data" method="post">
@@ -14,88 +17,111 @@
                             <div class="card-header"><strong>Paciente</strong>
                             </div>
                             
-                    <fieldset>
+                            <fieldset>
 
-                        <div class="form-group">
-                            {% for field in form %}
-                                {% if field.errors %}
-                                    <div
-                                        class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
-                                        <label class="control-label">{{ field.label }}</label>
-                                        {{ field|add_class:"form-control input-md" }}
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                        {% for error in field.errors%}
-                                        <span class="help-inline error">{{ error}}</span>
-                                        {% endfor%}
-                                    </div>
-                                {%else%}
-                                    <div
-                                        class="col-md-{% if field.name in 'full_name\ocupation\email' %}6
-                                        {% elif field.name in 'color\sex\marital_state\date_birth\local_birth' %}6
-                                        {% elif field.name in 'address' %}12
-                                        {% elif field.name in 'health_insurance' %}3
-                                        {% elif field.name in 'summary' %}12
-                                        {% else %}6
-                                        {% endif %} margin-bottom-15">
+                                <div class="form-group">
+                                    {% for field in form %}
+                                        {% if field.errors %}
+                                            <div
+                                                class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
+                                                <label class="control-label">{{ field.label }}</label>
+                                                {{ field|add_class:"form-control input-md" }}
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
+                                                {% for error in field.errors%}
+                                                <span class="help-inline error">{{ error}}</span>
+                                                {% endfor%}
+                                            </div>
+                                        {%else%}
+                                            <div
+                                                class="col-md-{% if field.name in 'full_name\ocupation\email' %}6
+                                                {% elif field.name in 'color\sex\marital_state\date_birth\local_birth' %}6
+                                                {% elif field.name in 'address' %}12
+                                                {% elif field.name in 'health_insurance' %}3
+                                                {% elif field.name in 'summary' %}12
+                                                {% else %}6
+                                                {% endif %} margin-bottom-15">
 
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        {{ field|add_class:"form-control input-md" }}
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                {{ field|add_class:"form-control input-md" }}
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                    {%endif%}
+                                    {% endfor %}
+                                    <div class="card">
+                                        <div class="card-body" >
+                                            <table class="table table-striped table-bordered" id="usercommitee" class="link-formset">
+                                                <thead>
+                                                    <tr>
+                                                        <th >Número</th>
+                                                        <th>Tipo</th>
+                                                        <th>Ação</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for phone in second_form %}
+                                                    <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
+                                                        {{ phone.id }}
+                                                        <td>
+                                                            {{ phone.phone_number|add_class:"form-control input-md" }}
+                                                        </td>
+                                                        <td>
+                                                            {{ phone.phone_type|add_class:"form-control input-md" }}
+                                                        </td>
+                                                        <td>{{phone.DELETE}}</td>
+                                                    </tr>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                            {{ second_form.management_form }}
+                                        </div>
                                     </div>
-                            {%endif%}
-                            {% endfor %}
-                            {% for field in second_form %}
-                                {% if field.errors %}
-                                    <div
-                                        class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
-                                        <label class="control-label">{{ field.label }}</label>
-                                        {{ field|add_class:"form-control input-md" }}
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                        {% for error in field.errors%}
-                                        <span class="help-inline error">{{ error}}</span>
-                                        {% endfor%}
-                                    </div>
-                                {%else%}
-                                    <div
-                                        class="col-md-{% if field.name in 'full_name\date_birth\ocupation' %}6
-                                        {% elif field.name in 'color\sex\marital_state\phone\fax\email' %}4
-                                        {% elif field.name in 'address' %}12
-                                        {% elif field.name in 'local_birth\health_insurance' %}3
-                                        {% elif field.name in 'summary' %}12
-                                        {% else %}6
-                                        {% endif %} margin-bottom-15">
 
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        {{ field|add_class:"form-control input-md" }}
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    </div>
-                                {%endif%}
-                            {% endfor %}
+                                </div>
+                                </fieldset>
+                        
+                                <br>
+                                <div class="form-actions form-group col-md-3">
+
+                                    <a href=" {% url 'patient:list_patient' %}"><input type="button" class="btn btn-success" style="border-radius: 3px;" value="Finalizar"></a>
+                                </div>
+
+                            </div>
 
                         </div>
-                    </fieldset>
-                    
-                    <br>
-                    <div class="form-actions form-group col-md-3">
-                        <input value="Adicionar telefone" type="button" class="btn btn-secondary" style="border-radius: 3px;" onclick="">
                     </div>
-                    <div class="form-actions form-group col-md-3"><button type="submit" class="btn btn-success" style="border-radius: 3px;">Finalizar</button></div>
-
-                    </div>
-
                 </div>
             </div>
-        </div>
+        </form>
     </div>
-    </form>
-</div>
 </div>
 
 {% endblock %}
 
 {% block js %}
+    {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> {% endcomment %}
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/jquery.formset.js' %}"></script>
     <script>
+        $('#usercommitee tbody tr').formset({
+			prefix: '{{ second_form.prefix }}',
+            addText: '<i class="menu-icon fa fa-plus-square-o"></i> Adicionar',
+			addCssClass: 'btn btn-success adicionar',
+            deleteText: '<i class="menu-icon fa fa-trash"></i>',
+            deleteCssClass: 'btn btn-danger',
+            deleteCssClass: 'delete-row',
+			formCssClass: 'dynamic-form', 
 
+
+        });
     </script>
-
+    <script type="text/javascript" src="{% static 'js/bootstrap-filestyle.js' %}"></script>
+    <script type="text/javascript">
+        $(function(){
+            $(":file").filestyle({
+                buttonName: "btn-primary",
+                buttonBefore:true,
+                buttonText: "Escolher arquivo"
+            });
+        });
+    </script>
 {% endblock %}
