--- a/ubs/patient/templates/patient/detail.html
+++ b/ubs/patient/templates/patient/detail.html
@@ -39,49 +39,96 @@
                                 </div>
 
                                 {%else%}
-                                <div class="col-md-{% if field.name in 'patient\summary\review_of_systems' %}12
-                                                {% elif field.name in 'main_complaint\current_health_history/epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
-                                                {% elif field.name in 'physical_exam\pa_exam\p_exam\fc_exam\fr_exam\tax_exam\peso_exam\heigth_exam' %}3         
+                                <div class="col-md-6 margin-bottom-15">
 
-                                                {% else %}6
-                                                {% endif %} margin-bottom-15">
-
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% if field.name in 'Type_Logradouro_idLogradouro'   %}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={{ object.Type_Logradouro_idLogradouro}}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name == 'City_codIBGE'%}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={{ object.City_codIBGE}}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name in Color_idColor %}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={{ object.Color_idColor}}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name in 'Marital_State_idMarital_State'%}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={{ object.Marital_State_idMarital_State}}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name in 'Ocupation_idOcupation'%}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={{ object.Ocupation_idOcupation}}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name in 'Medical_Insurance_idMedical_insurance'%}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={{ object.Medical_Insurance_idMedical_insurance}}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name in 'sex' %}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        <input type="text" class="form-control input-md" readonly value={% if object.sex == "M" %} "Masculino" {% elif object.sex == "F" %} "Feminino" {% else %} "Outro" {% endif %}> 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% elif field.name in 'image_patient' %}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        {% if object.image_patient %}
+                                            <br>
+                                            <button type="button" class="btn btn-outline-link"><a href="/ubs/media_images/{{ object.image_patient }}" target="blank"> Imagem do paciente <i class="fa fa-download"></i> </a></button>
+                                        {% else %}
+                                            <input type="text" class="form-control input-md" readonly> 
+                                        {% endif %} 
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% else %}
+                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                        {{ field|add_class:"form-control input-md" }}
+                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                    {% endif %}
                                 </div>
                                 {% endif %}
                                 {%endif%}
                                 {% endfor %}
                                 
-                                {% for field in second_form %}
-                                    {% if field.errors %}
-
-                                        <div class="col-md-{% if field.name in 'pa\p\fc' %}4
-                                                            {% elif field.name in 'color\sex\marital_state\phone\fax\email' %}4
-                                                            {% else %}6
-                                                            {% endif %} margin-bottom-15">
-                                            >
-                                            <label class="control-label">{{ field.label }}</label>
-                                            {{ field|add_class:"form-control input-md" }}
-                                            <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                            {% for error in field.errors%}
-                                            <span class="help-inline error">{{ error }}</span>
-                                            {% endfor%}
+                                <div class="card">
+                                        <div class="card-body" >
+                                            <table class="table table-striped table-bordered" id="usercommitee" class="link-formset">
+                                                <thead>
+                                                    <tr>
+                                                        <th >Número</th>
+                                                        <th>Tipo</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for phone in second_form %}
+                                                    {% if phone.errors %}
+                                                        <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
+                                                            {{ phone.id }}
+                                                            <td>
+                                                                {{ phone.phone_number|add_class:"form-control input-md" }}
+                                                                <span class="help-inline error">{{ phone.phone_number.errors}}</span>
+                                                            </td>
+                                                            <td>
+                                                                {{ phone.phone_type|add_class:"form-control input-md" }}
+                                                            </td>
+                                                            <td>{{phone.DELETE}}</td>
+                                                        </tr>
+                                                    {%else%}
+                                                        <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
+                                                            {{ phone.id }}
+                                                            <td>
+                                                                {{ phone.phone_number|add_class:"form-control input-md" }}
+                                                            </td>
+                                                            <td>
+                                                                <input type="text" class="form-control input-md" readonly value={{ model_phone.phone_type }}> 
+                                                                {% comment %} {{ phone.phone_type|add_class:"form-control input-md" }} {% endcomment %}
+                                                            </td>
+                                                        </tr>
+                                                    {%endif%}
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                            {{ second_form.management_form }}
                                         </div>
-                                        {%else%}
-                                        <div class="col-md-{% if field.name in 'pa\p\fc' %}4
-                                                            {% elif field.name in 'color\sex\marital_state\phone\fax\email' %}4
-                                                            {% else %}6
-                                                            {% endif %} margin-bottom-15">
-
-                                            <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                            {{ field|add_class:"form-control input-md" }}
-                                            <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                        </div>
-                                    {%endif%}
-                                {% endfor %}
-
+                                    </div>
 
                             </div>
                         </fieldset>
